# Anemo-Slime-UI

./: README.md  ui framework.drawio
backend/: Cargo.toml
backend/anemo-slime-example-1/: Cargo.toml
backend/anemo-slime-example-1/src/: main.rs  mvvm_core.rs  user_example.rs
backend/example/: example_simple.rs  example_table.rs
doc/: Server API.md  ui framework.drawio
frontend/: package.json  tsconfig.json
frontend/src/: main.ts
frontend/src/components/: AsButton.vue  AsLabel.vue  AsLoader.vue  index.ts
frontend/src/layouts/default/: Default.vue
frontend/src/plugins/: AsFramework.ts  index.ts
frontend/src/router/: index.ts
frontend/src/views/: Example.vue  Test.vue  index.ts
