[package]
name = "anemo-slime-example-1"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
